--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,7 +1,8 @@
 nav {
-    width: 100%;
+    margin: auto;
+    width: 80%;
     display:grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     text-align: center;
 }
 
