--- a/css/navbar.css
+++ b/css/navbar.css
@@ -4,6 +4,8 @@ nav {
     display:grid;
     grid-template-columns: repeat(3, 1fr);
     text-align: center;
+    margin-bottom: 1em;
+    margin-top: 1em;
 }
 
 nav>a {
@@ -22,19 +24,12 @@ nav>a:hover {
 
 @media (max-width:1400px) {
     nav {
-        width: 95vw;
-    }
-    #hjem {
-        grid-area: 1/1/span 1/span 1;
+        grid-template-columns: repeat(3, auto);
     }
 }
 
 @media (max-width:400px) {
     nav {
-        grid-template-columns: repeat(2, auto);
-        width: 95vw;
-    }
-    #hjem {
-        grid-area: 1/1/span 1/span 1;
+        grid-template-columns: repeat(1, auto);
     }
 }
