--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -31,4 +31,4 @@ main p, main h2 {
         background-position-x: 35%;
     }
 }
-.bus{background-image url(../image/BusP.jpng)}
+.bus{background-image url(../image/BusImg.jpg)}
