--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -31,4 +31,4 @@ main p, main h2 {
         background-position-x: 35%;
     }
 }
-.bus{background-image: url(../image/BusImg.jpg); heigth: 768px; width:1024px;}
+.bus{background-image: url(../image/BusImg.jpg); height: 768px; width:1024px;}
