--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,4 +32,4 @@ main p, main h2 {
         background-position-x: 35%;
     }
 }
-.bus{background-image: url(../image/BusImg.jpg); height: 768px; width:1024px;}
+#bus{background-image: url(../image/BusImg.jpg); height: 768px; width:1024px;}
