--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,4 +32,6 @@ main p, main h2 {
         background-position-x: 35%;
     }
 }
-.abtBusImg{width:50%; height: auto; margin: 2% 4% 2% 4%}
+.abtBusImg{width:50%; height: auto; boarder:}
+@media only and screen(maxwidth: 2000px){.pBus{width: 70%; margin:auto;}
+}
