--- a/css/busstylesheet.css
+++ b/css/busstylesheet.css
@@ -13,24 +13,29 @@ main {
     grid-template-columns:1fr 1fr;
 }
 
-
-
-p {width: 80%;
+p{width: 80%;
         margin-left:6em;
         font-size: 22px;
 }
 
-img{
-    border-radius:40%;
+img{width:70%;
+height:auto;
+border-radius:40%;
     padding:15% 10%;
-}
-
-@media (max-width:750px){
-    main {
-        grid-template-columns: 1fr;
     }
-    img{width:70%;
+}
+@media (max-width:750px){
+     main {
+        grid-template-columns: 1fr;
+     }
+     img{width:70%;
          height: auto;
          grid-area: 2/1/span 1/span 1;
+}
+}
+@media (max-width 1900px){
+    img{width:70%;
+        height: auto;
+        grid-area: 1/2/span 1/span 1;
     }
 }
