--- a/css/us_style.css
+++ b/css/us_style.css
@@ -12,7 +12,7 @@ main {
 }
 
 #bigImage {
-    background-image: url(../images/bus.png);
+    background-image: url(../images/students.jpg);
     background-size: cover;
     background-position-x: center;
     background-position-y: 45%;
