--- a/css/us_style.css
+++ b/css/us_style.css
@@ -9,6 +9,15 @@ body {
 
 main {
     width: 100%;
+
+ }
+
+.align{
+    text-align:center;
+}
+
+h2{
+    text-align:center;
 }
 
 #bigImage {
@@ -24,8 +33,14 @@ main p, main h2 {
     width: 80%;
     margin: auto;
     margin-bottom: 1em;
-    font-size: large;
 }
+
+img{min-width:10em;
+    width: 45%;
+    height:auto;
+    padding: 1% 10%;
+}
+footer{font-size:0.75em; padding: 3% 10%}
 
 @media (max-width:400px) {
     #bigImage {
