--- a/css/navbar.css
+++ b/css/navbar.css
@@ -21,6 +21,24 @@ nav>a:hover {
     color: darkslategray;
 }
 
+footer {
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+    justify-items: center;
+    width: 50vw;
+    margin: auto;
+    margin-top: 2%;
+    padding: 1vh 1vw 1vh 1vw;
+    background-color: darkslategray;
+}
+footer p {
+    width: fit-content;
+    color: whitesmoke;
+    margin: 0;
+    text-align: center;
+    font-size: medium;
+}
+
 
 @media (max-width:1400px) {
     nav {
