--- a/css/busstylesheet.css
+++ b/css/busstylesheet.css
@@ -14,6 +14,13 @@ main {
     grid-template-columns: 1fr 1fr;
 }
 
+h2 {
+    grid-area: 1/1/span 1/span 2;
+    width: fit-content;
+    margin: auto;
+    font-size: large;
+}
+
 p {
     width: 80%;
     margin-left: 10%;
@@ -35,6 +42,6 @@ img {
         width: 70%;
         padding: 5% 15%;
         height: auto;
-        grid-area: 2/1/span 1/span 1;
+        grid-area: 3/1/span 1/span 1;
     }
 }
