--- a/css/navbar.css
+++ b/css/navbar.css
@@ -7,6 +7,10 @@ nav {
     margin-bottom: 1em;
     margin-top: 1em;
 }
+nav:hover{
+    background-color: blue; 
+    color: white;
+}
 
 nav>a {
     background-color: darkslategray;
