--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,6 +14,7 @@ main {
 #bigImage {
     background-image: url(../images/bus.png);
     background-size: cover;
+    max-width: 100%
     background-position-x: center;
     background-position-y: 45%;
     height: 55vh;
