--- a/css/navbar.css
+++ b/css/navbar.css
@@ -7,10 +7,6 @@ nav {
     margin-bottom: 1em;
     margin-top: 1em;
 }
-nav:hover{
-    background-color: blue; 
-    color: white;
-}
 
 nav>a {
     background-color: darkslategray;
@@ -20,7 +16,7 @@ nav>a {
     padding: 1em 0 1em 0;
     border: 1px solid darkslategray;
 }
-nav>a:hover {
+nav>a:hover, nav>a:target {
     background-color: whitesmoke;
     color: darkslategray;
 }
