--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,9 @@
+body {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    height: 99%;
+}
+
 nav {
     margin: auto;
     width: 80%;
@@ -30,11 +36,14 @@ footer {
     display: grid;
     grid-template-rows: repeat(2, auto);
     justify-items: center;
-    width: 50vw;
-    margin: auto;
+    width: 50%;
     margin-top: 2%;
     padding: 1vh 1vw 1vh 1vw;
     background-color: darkslategray;
+    position: absolute;
+    bottom: 1em;
+    left: 25%;
+    right: 25%;
 }
 footer p {
     width: fit-content;
